<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/splash"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/topmargin"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="استعادة كلمة المرور ؟"
        android:gravity="center"
        style="@style/Title"
        android:layout_below="@id/loginlogo"
        android:textColor="@color/black"
        android:id="@+id/TXT"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/EdLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TXT"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/topmargin"
        android:layout_marginRight="@dimen/topmargin2"
        android:visibility="invisible"
        android:layout_marginLeft="@dimen/topmargin2">

        <EditText
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="@dimen/mid"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>
<android.support.design.widget.TextInputLayout
        android:id="@+id/EdLoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EdLoginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/topmargin"
    android:layout_marginRight="@dimen/topmargin2"
    android:layout_marginLeft="@dimen/topmargin2">

        <EditText
            android:id="@+id/EdEmailMissed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/mid"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <Button

        style="@style/button"
        android:layout_below="@id/EdLoginPass"
        android:text="التالى"
        android:id="@+id/Btmissed"/>
    <Button
        android:visibility="invisible"
        style="@style/wbutton"
        android:layout_below="@id/Btmissed"
        android:text="@string/register"
        android:id="@+id/BtLoginlogin2"/>

    <LinearLayout
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/BtLoginlogin2"
        android:gravity="center"
        android:id="@+id/forgetpasww"
        android:background="#77FFFFFF"
        android:layout_marginTop="@dimen/topmargin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpass"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/mid"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpass1"
            android:textSize="@dimen/mid"/>
    </LinearLayout>


</RelativeLayout>